--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
 
     <link rel="stylesheet" href="/CSS/style.css">
-    <title>Document</title>
+    <title>PortFolio</title>
 </head>
 <body>
     <div class="main-container">
