--- a/index.html
+++ b/index.html
@@ -565,6 +565,6 @@
             </div>
         </div>
     </div>
-    <script src="/Script/script.js"></script>
+    <script type="text/javascript" src="/Script/script.js"></script>
 </body>
 </html>
