--- a/index.html
+++ b/index.html
@@ -307,16 +307,16 @@
                                             <div id="FashionC1" class="carousel slide" data-ride="carousel">
                                                 <div class="carousel-inner">
                                                   <div class="carousel-item active" data-interval="3000">
-                                                    <img src="/Images/Projects/FashionStreak/Home.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FashionStreak/Home.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/FashionStreak/Appointment.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FashionStreak/Appointment.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/FashionStreak/Details.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FashionStreak/Details.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/FashionStreak/Design.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FashionStreak/Design.png" class="d-block w-100" alt="...">
                                                   </div>
                                                 </div>
                                                 <a class="carousel-control-prev" href="#FashionC1" role="button" data-slide="prev">
@@ -341,7 +341,7 @@
                             <div class="d-inline-block">
                                 <div class="d-flex flex-column justify-content-center pcard" id="FashionA" data-toggle="modal" data-target="#FashionMobile">
                                     <h2>FashionStreak</h2>
-                                    <p>Fashion Site</p>
+                                    <p>Fashion App</p>
                                 </div>
                                 <div class="modal fade" id="FashionMobile" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
@@ -356,22 +356,22 @@
                                             <div id="FashionAC1" class="carousel slide" data-ride="carousel">
                                                 <div class="carousel-inner">
                                                   <div class="carousel-item active" data-interval="3000">
-                                                    <img src="/Images/Projects/MobileApp/PicsArt_11-10-07.10.49.jpg" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/MobileApp/PicsArt_11-10-07.10.49.jpg" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/MobileApp/PicsArt_11-10-07.11.18.jpg" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/MobileApp/PicsArt_11-10-07.11.18.jpg" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/MobileApp/PicsArt_11-10-07.11.39.jpg" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/MobileApp/PicsArt_11-10-07.11.39.jpg" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/MobileApp/PicsArt_11-10-07.12.05.jpg" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/MobileApp/PicsArt_11-10-07.12.05.jpg" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/MobileApp/PicsArt_11-10-07.12.43.jpg" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/MobileApp/PicsArt_11-10-07.12.43.jpg" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/MobileApp/PicsArt_11-10-07.13.04.jpg" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/MobileApp/PicsArt_11-10-07.13.04.jpg" class="d-block w-100" alt="...">
                                                   </div>
                                                 </div>
                                                 <a class="carousel-control-prev" href="#FashionAC1" role="button" data-slide="prev">
@@ -409,16 +409,16 @@
                                             <div id="TestwishC" class="carousel slide" data-ride="carousel">
                                                 <div class="carousel-inner">
                                                   <div class="carousel-item active" data-interval="3000">
-                                                    <img src="/Images/Projects/FoodBlog/Home.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FoodBlog/Home.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/FoodBlog/Account.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FoodBlog/Account.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/FoodBlog/Blogging.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FoodBlog/Blogging.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/FoodBlog/Photography.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/FoodBlog/Photography.png" class="d-block w-100" alt="...">
                                                   </div>
                                                 </div>
                                                 <a class="carousel-control-prev" href="#TestwishC" role="button" data-slide="prev">
@@ -456,19 +456,19 @@
                                             <div id="TravelW" class="carousel slide" data-ride="carousel">
                                                 <div class="carousel-inner">
                                                   <div class="carousel-item active" data-interval="3000">
-                                                    <img src="/Images/Projects/Travelling/Home.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/Travelling/Home.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/Travelling/Asia.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/Travelling/Asia.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/Travelling/Destination.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/Travelling/Destination.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/Travelling/Country.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/Travelling/Country.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/Travelling/Destinationinfo.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/Travelling/Destinationinfo.png" class="d-block w-100" alt="...">
                                                   </div>
                                                 </div>
                                                 <a class="carousel-control-prev" href="#TravelW" role="button" data-slide="prev">
@@ -506,13 +506,13 @@
                                             <div id="ABW" class="carousel slide" data-ride="carousel">
                                                 <div class="carousel-inner">
                                                   <div class="carousel-item active" data-interval="3000">
-                                                    <img src="/Images/Projects/PythonApp/Loginwin.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/PythonApp/Loginwin.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/PythonApp/PythonApp.png" class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/PythonApp/PythonApp.png" class="d-block w-100" alt="...">
                                                   </div>
                                                   <div class="carousel-item" data-interval="3000">
-                                                    <img src="/Images/Projects/PythonApp/Add.png"class="d-block w-100" alt="...">
+                                                    <img src="Images/Projects/PythonApp/Add.png"class="d-block w-100" alt="...">
                                                   </div>
                                                 </div>
                                                 <a class="carousel-control-prev" href="#ABW" role="button" data-slide="prev">
