--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 pr-0 pl-0 text-center">
-                    <div class="container-fluid h-100 d-flex flex-column justify-content-center" id="Home">
+                    <div class="container-fluid h-100 d-flex flex-column justify-content-center" id="Home" style="background-image: linear-gradient(to right,rgb(38, 39, 39) 0%,rgba(39, 39, 39, 0) 100%),url(Gaurav.jpg);">
                         <div class="name container-fluid">
                             <h3>Hello,I'm</h3>
                             <h1>Gaurav Dhawale</h1>
