--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h1>About Me</h1>
                         <div class="container-fluid d-flex flex-wrap justify-content-around abcontent">
                             <div class="imagediv">
-                                <div class="simage">
+                                <div class="simage" style="background-image: url('Gaurav.jpg');">
         
                                 </div>
                                 <div class="triangle"></div>
