--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     </nav>
                     <div class="d-flex justify-content-evenly social w-100">
                         <div>
-                            <a href="https://www.facebook.com/gaurav.d.581">
+                            <a href="">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             </a>
                         </div>
                         <div>
-                            <a href="https://www.instagram.com/_gau._.rav_">
+                            <a href="">
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                             </a>
                         </div>
