--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             </a>
                         </div>
                         <div>
-                            <a href="">
+                            <a href="https://www.instagram.com/_gau._.rav_/">
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                             </a>
                         </div>
