--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                                   <div class="modal-content bg-dark">
                                     <div class="modal-header">
-                                      <h5 class="modal-title">AB Industries</h5>
+                                      <h5 class="modal-title">FoodHub</h5>
                                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                       </button>
